k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipservice
spec:
  type: ClusterIP
  selector:
    app: ipcidrcalculator
  ports:
  - port: 80
    targetPort: 80
